INTYG-3206: Fixed vertical alignment of checkboxes and labels.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.scss
@@ -8,10 +8,12 @@
 
   label {
     font-weight: normal;
+    line-height: 32px;
+    vertical-align: bottom;
+    margin-bottom: 0;
   }
 
   .sjukskrivningar_period {
     float: right;
   }
-
 }
